--- a/getdinerotoday/templates/landingpages/index.html
+++ b/getdinerotoday/templates/landingpages/index.html
@@ -48,18 +48,26 @@
 
 <!-- inject css end -->
 <!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/5e0518eb7e39ea1242a1ea79/default';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:1784619,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
 </script>
-<!--End of Tawk.to Script-->
+<script>
+  window.intercomSettings = {
+    app_id: "s1nwi3kp"
+  };
+</script>
+
+<script>
+// We pre-filled your app ID in the widget URL: 'https://widget.intercom.io/widget/s1nwi3kp'
+(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',w.intercomSettings);}else{var d=document;var i=function(){i.c(arguments);};i.q=[];i.c=function(args){i.q.push(args);};w.Intercom=i;var l=function(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/s1nwi3kp';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);};if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})();
+</script>
 
 
 </head>
@@ -505,9 +513,9 @@ s0.parentNode.insertBefore(s1,s0);
             <div class="bar bar-left"></div>
           </div>
           <h2 class="title">Why Buy From Us?</h2>
-           <div class="youtube-player" data-id="uS7BjJ83ZIQ" data-related="0" data-control="0" data-info="1" data-fullscreen="0" style="width:100%;display: block; position: relative;cursor: pointer;max-height:NaNpx;height:100%; overflow:hidden;padding-bottom:56.25%;margin:0 auto"> <img src="https://getdinerotoday.com/images/mackbook/02.jpg" style="bottom: -100%; display: block; left: 0; margin: auto; max-width: 100%; width: 100%;height:auto; position: absolute; right: 0; top: -100%;"> <div style="height: 72px; width: 72px; left: 50%; top: 50%; margin-left: -36px; margin-top: -36px; position: absolute; background: url('https://i.imgur.com/TxzC70f.png') no-repeat;"></div> </div> 
-           
-           
+           <div class="youtube-player" data-id="uS7BjJ83ZIQ" data-related="0" data-control="0" data-info="1" data-fullscreen="0" style="width:100%;display: block; position: relative;cursor: pointer;max-height:NaNpx;height:100%; overflow:hidden;padding-bottom:56.25%;margin:0 auto"> <img src="https://getdinerotoday.com/images/mackbook/02.jpg" style="bottom: -100%; display: block; left: 0; margin: auto; max-width: 100%; width: 100%;height:auto; position: absolute; right: 0; top: -100%;"> <div style="height: 72px; width: 72px; left: 50%; top: 50%; margin-left: -36px; margin-top: -36px; position: absolute; background: url('https://i.imgur.com/TxzC70f.png') no-repeat;"></div> </div>
+
+
         <!--<iframe width="100%" height="515" src="https://www.youtube.com/embed/uS7BjJ83ZIQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
         </div>
       </div>
