--- a/business/templates/home/upgrade.html
+++ b/business/templates/home/upgrade.html
@@ -26,7 +26,7 @@
         <div class="jumbotron jumbotron-fluid">
       <div class="container">
         <h2>Our Different Financing Plans</h2>
-        <h3>We Have No Credit Check 0% Interest Offers For You</h3>
+        <h3>We Have No Money Down Offers For You</h3>
         <h3><b>Watch The Video Above To Help You Choose The Best Plan For You</b></h3>
       </div>
       </div>
@@ -41,25 +41,25 @@
       }
       </style>
         <div class="row">
-            <div class="col-md-4 col-sm-6">
-                <div class="card mb-4 shadow-sm">
-                    <img src="https://getdinerotoday.herokuapp.com/static/images/viabill.jpg"
-                         height="270px" width="100%" alt="">
-                    <div class="card-body">
-                        <h4 class="card-text"><b>Buy Now. Pay Later. 4 Interest Free Installments. 0% Interest</b></h4>
-                        <h5 class="card-text">Click Below To Do A Down Payment Of $72.50 & Spread Your Payments Bi Weekly At $300 Per Every Two Weeks Over The Next 2 Months</h5>
-                          <iframe width="100%" height="315" src="https://www.youtube.com/embed/7PmxNTZZ_Oo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        <div class="d-flex justify-content-between align-items-center">
-                            <div class="btn-group"> <br><br>
-                                <a href="https://millennialsbuildinggreatness.com/products/business-builders-three-payment-package-300-down-with-viabill" target="_blank" class="btn btn-primary">
-
-                                    Sign Up For The Service
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+          <div class="col-md-4 col-sm-6">
+              <div class="card mb-4 shadow-sm">
+                  <img src="https://getdinerotoday.herokuapp.com/static/images/behalf.jpeg"
+                       height="270px" width="100%" alt="">
+                  <div class="card-body">
+                    <h4 class="card-text"><b>Payments Over 6 Months 1% Interest Per Month</b></h4>
+                    <h5 class="card-text">Click Here To Purchase Now & Pay 1-2% Interest Over The Next 4-6 Months</h5>
+                    <h5 class="card-text">Watch Video Below To See How To Purchase With Payment Option</h5>
+                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/-NKit3HMwJg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                      <div class="d-flex justify-content-between align-items-center">
+                          <div class="btn-group"> <br><br>
+                              <a href="https://app.behalf.com/invite/R4xfcKmU" target="_blank" class="btn btn-primary">
+                                  Sign Up For The Service
+                              </a>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
             <div class="col-md-4 col-sm-6">
                 <div class="card mb-4 shadow-sm">
                     <img src="https://getdinerotoday.herokuapp.com/static/images/klarna-og.jpg"
@@ -102,72 +102,6 @@
             <!-- Dont remove this comment -->
 
         </div>
-
-        <div class="row">
-            <div class="col-md-4 col-sm-6">
-                <div class="card mb-4 shadow-sm">
-                    <img src="https://getdinerotoday.herokuapp.com/static/images/behalf.jpeg"
-                         height="270px" width="100%" alt="">
-                    <div class="card-body">
-                      <h4 class="card-text"><b>Payments Over 6 Months 1% Interest Per Month</b></h4>
-                      <h5 class="card-text">Click Here To Purchase Now & Pay 1-2% Interest Over The Next 4-6 Months</h5>
-                      <h5 class="card-text">Watch Video Below To See How To Purchase With Payment Option</h5>
-                      <iframe width="100%" height="315" src="https://www.youtube.com/embed/-NKit3HMwJg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        <div class="d-flex justify-content-between align-items-center">
-                            <div class="btn-group"> <br><br>
-                                <a href="https://app.behalf.com/invite/R4xfcKmU" target="_blank" class="btn btn-primary">
-                                    Sign Up For The Service
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <div class="card mb-4 shadow-sm">
-                    <img src="https://newsroom.mastercard.com/wp-content/uploads/2016/09/paypal-logo.png"
-                         height="270px" width="100%" alt="">
-                    <div class="card-body">
-                        <h4 class="card-text"><b>Business Builder Program Monthly Package Monthly Payments Of $159.99</b></h4>
-                        <h5 class="card-text">Click Button Below To Make Monthly Payments Of $159.99</h5>
-                        <h5 class="card-text">Watch Video Below To See How To Purchase With Payment Option</h5>
-                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/ppd1hzQ8dLQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        <div class="col-md-12 mt-2">
-                            <p>Click Button Below To Make Monthly Payments Of $159.99</p>
-                            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
-             <input type="hidden" name="cmd" value="_s-xclick">
-             <input type="hidden" name="hosted_button_id" value="JHUCXD2TWBEMA">
-             <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_subscribeCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-             <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-             </form>
-                </div>
-            </div>
-          </div>
-      </div>
-
-            <div class="col-md-4 col-sm-6">
-                <div class="card mb-4 shadow-sm">
-                    <img src="https://newsroom.mastercard.com/wp-content/uploads/2016/09/paypal-logo.png"
-                         height="270px" width="100%" alt="">
-                    <div class="card-body">
-                        <h4 class="card-text"><b>Business Builder Program Annual Package One Payment Of $1,499</b></h4>
-                        <h5 class="card-text">Watch Video Below To See How To Purchase With Payment Option</h5>
-                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/ppd1hzQ8dLQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        <div class="col-md-12 mt-2">
-                            <p>Click Button Below To Make $1,499 Payment</p>
-                            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
-                               <input type="hidden" name="cmd" value="_s-xclick">
-                               <input type="hidden" name="hosted_button_id" value="VXRETN67PQDL2">
-                               <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-                               <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-                              </form>
-
-
-                        </div>
-                    </div>
-                    </div>
-                </div>
-            </div>
             <!-- ANCHOR_FOR_NEW_CARDS -->
             <!-- Dont remove this comment -->
 
