--- a/getdinerotoday/templates/landingpages/about-us.html
+++ b/getdinerotoday/templates/landingpages/about-us.html
@@ -98,8 +98,10 @@
             <div class="bar bar-bottom"></div>
             <div class="bar bar-left"></div>
           </div>
+            {% if is_main_site %}
           <h2 class="title">Why Buy From Us?</h2>
         <iframe width="100%" height="515" src="https://www.youtube.com/embed/uS7BjJ83ZIQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            {% endif %}
         </div>
       </div>
     </div>
