--- a/business/templates/businessCreditMonitoringSingup.html
+++ b/business/templates/businessCreditMonitoringSingup.html
@@ -38,7 +38,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm">
-                    <img src="https://millennialbusinessbuilders.com/image33.jpg" height="300px" width="100%" alt="">
+                    <img src="https://images.pexels.com/photos/3184287/pexels-photo-3184287.jpeg?cs=srgb&dl=pexels-fauxels-3184287.jpg&fm=jpg" height="300px" style=' object-fit: cover' alt="">
                     <div class="card-body">
                         <p class="card-text">Click The Button Below To Fix My Business Credit Reports</p>
                         <div class="d-flex justify-content-between align-items-center">
