--- a/getdinerotoday/templates/pages/base-business.html
+++ b/getdinerotoday/templates/pages/base-business.html
@@ -69,12 +69,10 @@
                            <a href="{% url 'business:tradelines' %}"
                                class="nav-link"> Add Business Tradelines </a>
                       </li>
-                      {% if dynamic.is_main_site %}
-                        <li class="nav-item">
+                      <!--  <li class="nav-item">
                            <a href="{% url 'business:signupforconcierge' %}"#}
                                class="nav-link"> Sign Up For Concierge Program </a>
-                       </li>
-                       {% endif %}
+                       </li> -->
 
                         {% if request.user.external_resources.all %}
                             <li class="nav-item">
