--- a/getdinerotoday/templates/pages/base-business.html
+++ b/getdinerotoday/templates/pages/base-business.html
@@ -69,10 +69,10 @@
                            <a href="{% url 'business:tradelines' %}"
                                class="nav-link"> Add Business Tradelines </a>
                       </li>
-                      <!--  <li class="nav-item">
+                        <li class="nav-item">
                            <a href="{% url 'business:signupforconcierge' %}"#}
                                class="nav-link"> Sign Up For Concierge Program </a>
-                       </li> -->
+                       </li>
 
                         {% if request.user.external_resources.all %}
                             <li class="nav-item">
@@ -183,7 +183,7 @@
                                class="nav-link"> Choose Business Credit
                                 Building Steps You Need Done For You </a>
                         </li>
-
+                    {% endif %}
                         <li class="nav-item">
                             <a class="nav-link" href="javascript: void(0);" aria-expanded="false"> <span
                                     class="toggle-none"> Business Credit Bureaus To Become Established With  <span
