--- a/getdinerotoday/templates/pages/base-business.html
+++ b/getdinerotoday/templates/pages/base-business.html
@@ -414,7 +414,7 @@
                                       class="toggle-none">Live Chat</span></a>
                           </li>      -->
                         <li class="nav-item">
-                            <a href="https://www.getdinerotoday.com/customersuccessagent/" target="_blank"
+                            <a href="https://creator.us.uneeq.io/try/ef9e5b4c-deb5-4acb-acfb-7ba07e8bc8be" target="_blank"
                                class="nav-link"><span
                                     class="toggle-none">Your AI Customer Success Agent</span></a>
                         </li>
